fix padding for blogsearch on mobile

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -97,7 +97,7 @@
         }
 
         @media @bp-mobile {
-            padding: 90px 0 0 0;
+            padding: 100px 40px;
         }
     }
 
